# wasm-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/reader/: bytecode.rs  codes.rs  data.rs  elements.rs  enums.rs  exports.rs  functions.rs  globals.rs  imports.rs  memories.rs  mod.rs  modules.rs  names.rs  tables.rs  types.rs
